checks the trimed value of messages input vlaue before sending new message and making sure it is not null or just an empty space character or something. brings out the 'search result' note to the parent component therefore prevents displaying it for each search result. adds flex to the 'middle-of-the-page' class to keep everything aligned center (had issue in my-projects page when there were no projects). adds refresh token to session items in register (it was missing, i was only doing it in login).

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -100,6 +100,10 @@ button {
 }
 
 .middle-of-the-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin: 0;
   position: absolute;
   top: 50%;
