--- a/src/container/pages/myprojects/myprojects.scss
+++ b/src/container/pages/myprojects/myprojects.scss
@@ -8,7 +8,7 @@
   }
 
   .add-a-project-wrapper {
-    position: relative;
+    width: fit-content;
     margin-top: 5px;
     border: 1px solid #1c3987;
     border-radius: 5px;
